feat: add new filter get bicycles
